--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,32 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+
+.wrapper{
+    display:grid;
+  }
+.bg-custom{
+    background-color: #d1f695;
+}
+.-mt-35{
+    margin-top:-35px;
+}
+.card-link-vermas{
+    position: absolute;
+    width: 100%;
+    text-align: center;
+    left: 0;
+    bottom: 0;
+    /* border-top: 1px solid; */
+    background-color: #bbed62;
+    border-radius: 0.5rem;
+    color: #555;
+}
+.card-link-vermas:hover{
+    background-color: #cce5a0;
+}
+.botonera{
+    background-color: white;
+    z-index: 2;
+}
